2007-12-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_object.c: rb_hash_aset()'s key should be VALUE not ID.

2007-11-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_mainloop.c (source_prepare_add_poll_fd): treated
	G_IO_HUP as except case not read case.

2007-11-27  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_mainloop.c: don't use g_source_is_destroyed().

	* extconf.rb: detected curr_thread.

	* src/rbglib_mainloop.c: supported ruby 1.8.6 p0.

2007-11-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgutil_callback.c: used rb_thread_select() instead of
	rb_thread_wait_fd().

	* src/rbglib_mainloop.c: used G_IO_IN as initial events.

	* src/utils_callback.c: renamed to ...
	* src/rbgutil_callback.c: ... this.
	* src/utils_int64.c: renamed to ...
	* src/rbglib_int64.c: ... this.
	* src/rbglib.c: followed the above changes.

	* src/rbglib_mainloop.c (source_check): fixed a typo.

2007-11-25  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_mainloop.c: used GPollFD.

2007-11-23  Kouhei Sutou  <kou@cozmixng.org>

	* tests/test_glib2.rb: added GC.start.

2007-11-21  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_mainloop.c (source_prepare): checked pending signals.

2007-11-17  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_mainloop.c: used GSource not poll func overriding.

2007-11-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_fundamental.c: re-added for making more flexible
	backward compatibility layer.
	* src/glib2.def, src/rbgcompat.h: followed the above change.

	* src/rbgobject.h (RG_DEF_CONVERSION), src/rbgcompat.h: used RG_
	prefix not G_ prefix.

	* src/rbgobject.c: made GOBJ2RVAL overridable for non-fundamental
	type.

	* src/global.h: merged to src/rbgprivate.h and removed.
	* src/: followed the above changes.

	* src/glib2.def, src/depend: followed the below changes.

	* src/rbgobj_fundamental.c, src/rbgobj_convert.c,
	src/rbgobj_value.c, src/rbgobject.[ch], src/rbgobj_type.c: renamed